--- a/monetizevideosmotivacionais.shop/ofertaexclusiva/index.html
+++ b/monetizevideosmotivacionais.shop/ofertaexclusiva/index.html
@@ -315,16 +315,16 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
 				</div>
 				<div class="elementor-element elementor-element-3c566297 elementor-widget elementor-widget-text-editor" data-id="3c566297" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><span style="color: #000000;"><strong>R$ 7,20</strong></span></p>								</div>
+									<p><span style="color: #000000;"><strong>R$ 8,39</strong></span></p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-7f0e465c elementor-widget elementor-widget-text-editor" data-id="7f0e465c" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Ou apenas R$ 12,90 à vista!</p>								</div>
+									<p>Ou apenas R$ 15,00 à vista!</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-1c16e198 elementor-align-center elementor-widget elementor-widget-button" data-id="1c16e198" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow" href="https://pay.cakto.com.br/C8Rhqfj" target="_blank" rel="noopener">
+					<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow" href="https://pay.cakto.com.br/66bamo9_329392" target="_blank" rel="noopener">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">QUERO AGORA!</span>
 					</span>
@@ -339,7 +339,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
 				<div class="elementor-element elementor-element-1e3b9d3 elementor-align-center elementor-widget elementor-widget-button" data-id="1e3b9d3" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;fadeInDown&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/7MBHPdb" target="_blank" rel="noopener">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/3bi8cui_329260" target="_blank" rel="noopener">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Recusar</span>
 					</span>
