--- a/monetizevideosmotivacionais.shop/remodelar-videos-motivacionais/index.html
+++ b/monetizevideosmotivacionais.shop/remodelar-videos-motivacionais/index.html
@@ -325,7 +325,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
 				<div class="elementor-element elementor-element-8e1492d elementor-align-center elementor-widget elementor-widget-button" data-id="8e1492d" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow" href="https://pay.cakto.com.br/39JiXip" target="_blank" rel="noopener">
+					<a class="elementor-button elementor-button-link elementor-size-sm elementor-animation-grow" href="https://pay.cakto.com.br/h367feg_329380" target="_blank" rel="noopener">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">QUERO RECEBER   AS AULAS!</span>
 					</span>
@@ -340,7 +340,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
 				<div class="elementor-element elementor-element-4c6a30af elementor-align-center elementor-widget elementor-widget-button" data-id="4c6a30af" data-element_type="widget" data-settings="{&quot;_animation_mobile&quot;:&quot;fadeInDown&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/6BQ6dnS" target="_blank" rel="noopener">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://pay.cakto.com.br/3f2pr4r_321671" target="_blank" rel="noopener">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">Recusar</span>
 					</span>
