--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="matheusbusiness.site/monetizando-com-video-virais/index.html">
+					<A HREF="nolido.xyz/videosvirais">
 						Monetizando com Vídeo Virais &#8211; matheusbusiness.site
 					</A>		
 			</TD>
