--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 			<TD BACKGROUND="fade.gif">
 				&middot;
 					<A HREF="nolido.xyz/videosvirais">
-						Monetizando com Vídeo Virais &#8211; matheusbusiness.site
+						Monetizando com Vídeo Virais &#8211; Anonimato Pro
 					</A>		
 			</TD>
 		</TR>
@@ -117,7 +117,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	</H6>
 	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=matheusbusiness.site/monetizando-com-video-virais/index.html">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=nolido.xyz/videosvirais">
 
 
 <!-- ==================== Start epilogue ==================== -->
