--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="nolido.xyz/videosvirais">
+					<A HREF="nolido.xyz/videosvirais/index.html">
 						Monetizando com Vídeo Virais &#8211; Anonimato Pro
 					</A>		
 			</TD>
@@ -117,9 +117,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	</H6>
 	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=nolido.xyz/videosvirais">
-
-
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=nolido.xyz/videosvirais/index.html
 <!-- ==================== Start epilogue ==================== -->
 		</td>
 		</tr>
