--- a/videosvirais/index.html
+++ b/videosvirais/index.html
@@ -5,12 +5,12 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="UTF-8">
-			<title>Monetizando com Vídeo Virais &#8211; matheusbusiness.site</title>
+			<title>Monetizando com Vídeo Virais &#8211; Anonimato Pro</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name='robots' content='max-image-preview:large' />
 	<style>img:is([sizes="auto" i], [sizes^="auto," i]) { contain-intrinsic-size: 3000px 1500px }</style>
 	<script type='application/javascript'  id='pys-version-script'>console.log('PixelYourSite Free version 10.1.3');</script>
-<title>Monetizando com Vídeo Virais &#8211; matheusbusiness.site</title>
+<title>Monetizando com Vídeo Virais &#8211; Anonimato Pro</title>
 <link rel="alternate" type="application/rss+xml" title="Feed para matheusbusiness.site &raquo;" href="https://matheusbusiness.site/feed/" />
 <link rel="alternate" type="application/rss+xml" title="Feed de comentários para matheusbusiness.site &raquo;" href="https://matheusbusiness.site/comments/feed/" />
 <script>
